# analysis_25Al-2H

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
analysis/: README.md
analysis/scripts/: C2S-plot.R  C2S.csv  C2S.eps  EnergyLoss.py  astro_plots.C  beam_profile.eps  beam_profile.rootc  c1.C  c1.eps  c1.root  cs_corr.C  cs_corr.eps  cs_corr.rootc  cs_corr_lines.eps  cs_corr_lines2.eps  cs_corr_lines3.eps  decay_sum.py  decay_sum_3p.csv  decay_sum_reco.eps  density.eps  difference.root  ex_energy.csv  ex_energy.eps  ex_energy.txt  exc_energy.py  frag_tke.py  out.csv  plot_ex_energy.R  plot_ic.R  plot_rrate.R  reaclib.eps  reaction_rate.eps  rrate.root
analysis/src/: Analyzer.cpp  Detector.cpp  Detector.hpp  ElossTables.hpp  EnergyLoss.cpp  EnergyLoss.hpp  (+10 more)
figures/: cs_corr.eps
fresco/: 1-25Al_dn-eli.out  fort.13  fort.156  fort.16  fort.204  fort.206  fort.3  fort.35  fort.38  fort.39  fort.40  fort.48  fort.56  fort.75  fresco_wf_single_particle_width.py  parse_spwf.py  requirements.txt
log/: 23-05-16.md  convert.sh  newfile.sh
scripts/: astro.rootc  astro_plots.C  beam_profile.rootc  cs_corr.R  cs_corr.eps  cs_corr.rootc  data.txt  decay_sum.rootc  density.eps  density.root  exc_energy_fit.C  exc_energy_fit.rootc  ic_ede.eps  parse.R  quick_plot.py  reaclib.eps  reaction_rate.eps  reaction_rate.py
spreadsheets/: exp_results.xlsx  fresco.xlsx  results.xlsx
src/: Analyzer.cpp  Analyzer.hpp  IonChamber.cpp  IonChamber.hpp  MassLookup.hpp  NeutronDetector.cpp  Physics.cpp  Physics.hpp  RxnTarget.hpp  Spline.cpp  Timing.cpp  Timing.hpp  main.cpp
(+62 files in other folders)
